# PDG_Project

./: README.md  bilateral.cpp  binarization.cpp  boundingbox.cpp
algoritmofinal/: 12-6-1-RGB.ply  12-6-1.ply  CMakeLists.txt  algoritmo.cpp  sensorgiroscopioT1_gyr.csv  testcalibracion.ply
